[package]
name = "hyperlane-exex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reth_node_api = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-api" }
reth_exex = { git = "https://github.com/paradigmxyz/reth", package = "reth-exex" }
reth_node_ethereum = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-ethereum" }
reth_primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives" }
reth_provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider" }
reth_tracing = { git = "https://github.com/paradigmxyz/reth", package = "reth-tracing" }
reth = { git = "https://github.com/paradigmxyz/reth", package = "reth" }
futures = "0.3.30"
eyre = "0.6.8"
alloy-sol-types = { version = "0.7.2", features = ["json"] }
primitive-types = "0.12.1"

hyperlane_ethereum = {git = "https://github.com/hyperlane-xyz/hyperlane-monorepo/", package = "hyperlane-ethereum" }
hyperlane_core = {git = "https://github.com/hyperlane-xyz/hyperlane-monorepo/", package = "hyperlane-core" }
# secp256k1 = { version = "0.28", default-features = false, features = [
#     "global-context",
#     "recovery",
# ] }
serde_json = "1.0.116"
ethers = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2024-04-25" }

# [workspace.dependencies.ethers]
# features = []

# tag = "2024-04-25"

# [workspace.dependencies.ethers-signers]
# features = ["aws"]
# git = "https://github.com/hyperlane-xyz/ethers-rs"
# tag = "2024-04-25"

