[package]
name = "hyperlane-exex"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reth

op-reth = { git = "https://github.com/paradigmxyz/reth" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", features = ["serde"] }
reth-evm = { git = "https://github.com/paradigmxyz/reth" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth" }
reth-provider = { git = "https://github.com/paradigmxyz/reth" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth" }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", features = ["optimism"] }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth", features = ["optimism"] }
# alloy
alloy-eips = { git = "https://github.com/alloy-rs/alloy" }
alloy-consensus = "0.6.4"
alloy-primitives = { version = "0.8.10", default-features = false }
alloy-rlp = "0.3.4"
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", features = [
    "eth",
], default-features = false }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", default-features = false }
alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", default-features = false }
alloy-sol-types  = { version = "0.8", features = ["json"] }


# async
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
# tokio-tungstenite = { version = "0.23", features = ["native-tls"] }

# serde
serde = "1"
serde_json = "1"
hex = "0.4.3"

# misc
k256 = "0.13"
tracing = "0.1"
tracing-test = "0.2"
eyre = "0.6"
rand = "0.8"
async-trait = "0.1"
derive-new = "0.7"

aws-sdk-s3 = { version = "1.61.0", features = ["rustls", "behavior-version-latest"] }

# testing
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth" }

